--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,14 @@
         android:layout_height="wrap_content"
         android:onClick="onClick"
         android:text="注册" />
+
+    <Button
+        android:id="@+id/cancel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="onClick"
+        android:text="取消" />
+
     <Button
         android:id="@+id/delete"
         android:layout_width="match_parent"
